force-app/main/default/objects/HI_State_Carrier__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HI State Carrier Created</label>
    <type>DateTime</type>
</CustomField>