force-app/main/default/objects/HI_State_Carrier__c/fields/Deleted_At__c.field-meta.xml
<CustomField>
    <fullName>Deleted_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deleted At</label>
    <type>DateTime</type>
</CustomField>