force-app/main/default/objects/HI_State_Carrier__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>External concatenation, lowercase, no spaces, comma delimited 

database - model name - record id 

e.g. hi-state_carrier-4275209212</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>