force-app/main/default/objects/HI_State_Carrier__c/fields/Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Updated_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HI State Carrier Updated</label>
    <type>DateTime</type>
</CustomField>